--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Above Multi-purpose Free Bootstrap Responsive Template</title>
+<title>Coladco | Most Interactive Coaching Institute</title>
+<link rel="icon" href="img/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="http://webthemez.com" />
@@ -32,14 +33,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                  <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+                  <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="logo"/></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li> 
 						<li class="active"><a href="about.html">About Us</a></li>
 						<li><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="portfolio.html">Gallery</a></li>
                         <li><a href="pricing.html">Pricing</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -65,8 +66,8 @@
 							<div class="col-md-12">
 								<div class="about-logo">
 									<h3>We are awesome <span class="color">TEAM</span></h3>
-									<p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
-                                    	<p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas</p>
+									<p>The COLADCO institute aims to develop students with quality knowledge about various computer languages including Python, C, C++, Java, Php and javascript. Offering different courses in these languages, COLADCO also provides a positive learning environment where students are encouraged to interact closely with the teachers and seek help at any time.</p>
+                                    	<p> The students are provided with excellent concept building along with regular doubt clearing sessions. Contact for a friendly, interactive and positive learning experience.</p>
 								</div>
 								<a href="#" class="btn btn-color">Read more</a>  
 							</div>
@@ -79,8 +80,7 @@
 								<div class="space"></div>
 							</div>
 							<div class="col-md-6">
-								<p>Lorem ipsum dolor sit amet, cadipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde fuga error commodi architecto, laudantium culpa tenetur at id, beatae pet.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. adipisicing  sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium,m deserunt.</p>
+								<p>COladco is managed by a team of IT professionals, who offers the smart classes and also provide the best professional training in information technology.Coladco provide the quality service that exceeds the expectation of learners and is committed to learner’s satisfaction, to fulfill the requirement of the current industry. We are expert in understanding your aptitude and identifying your talent and then nurture you for technical excellence so, offers the right course to all students either they are new to the industry or looking to improve the skills.We trained you in optimized period of time with comprehensive and accurate training.</p>
 								<ul class="list-unstyled">
 									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Lorem ipsum enimdolor sit amet</li>
 									<li><i class="fa fa-arrow-circle-right pr-10 colored"></i> Explicabo deleniti neque aliquid</li>
@@ -99,7 +99,16 @@
 								<div class="block-heading-two">
 									<h3><span>Why Choose Us?</span></h3>
 								</div>
-								<p>Sed ut perspiciaatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur. <br/><br/>Sed ut perspiciaatis iste natus error sit voluptatem probably haven't heard of them accusamus.</p>
+								<p><li>Advance Study Notes.</li>
+									<li>More batch available.</li>
+									<li>Weekly Backup classes.</li>
+									<li>100% Positive results.</li>
+									<li>Smart Proctical classes.</li>
+									<li>Lowest fee for all courses.</li>
+									<li>Professional live project training.</li>
+									<li>Well qualified and experienced faculty.</li>
+								
+								</p>
 							</div>
 							<div class="col-md-4">
 								<div class="block-heading-two">
@@ -223,9 +232,9 @@
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team1.jpg" alt="">
+										<img class="img-responsive" src="img/team3.png" alt="">
 										<!-- Name -->
-										<h4>Johne Doe</h4>
+										<h4>Ishika Sharma</h4>
 										<span class="deg">Creative</span> 
 									</div>
 								</div>
@@ -233,20 +242,20 @@
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team2.jpg" alt="">
+										<img class="img-responsive" src="img/team2.png" alt="">
 										<!-- Name -->
-										<h4>Jennifer</h4>
-										<span class="deg">Programmer</span> 
+										<h4>Garvit Rajput</h4>
+										<span class="deg">Co-Founder</span> 
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
 									<!-- Team Member -->
 									<div class="team-member">
 										<!-- Image -->
-										<img class="img-responsive" src="img/team3.jpg" alt="">
+										<img class="img-responsive" src="img/team1.png" alt="">
 										<!-- Name -->
-										<h4>Christean</h4>
-										<span class="deg">CEO</span> 
+										<h4>Yatin vohra</h4>
+										<span class="deg">CEO & Co-Founder</span> 
 									</div>
 								</div>
 								<div class="col-md-3 col-sm-6">
@@ -270,78 +279,74 @@
 				</div>
 	</section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
-					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Our Contact</h5>
+						<address>
+						<strong>Coladco</strong><br>
+						425 Sector 31<br>
+						pin-121003</address>
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<i class="icon-phone"></i> 0129-3655277 <br>
+							<i class="icon-envelope-alt"></i> contactuscoladco@gmail.com
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Quick Links</h5>
+						<ul class="link-list">
+							<li><a href="https://www.google.com/maps/dir//COLADCO/data=!4m8!4m7!1m0!1m5!1m1!1s0x390cddb682b1ff6f:0x563cf9eaf8f6c262!2m2!1d77.3133462!2d28.4431904">Get Directions</a></li>
+							<li><a href="tel:+91-70424-14212">Contact Us</a></li>
+							<li><a href="https://api.whatsapp.com/send/?phone=%2B917042414212&text&app_absent=0">Whatsapp Us</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Business Timings</h5>
+						<ul class="link-list">
+							<li>Mon:	2:00 – 8:00 PM</li>
+							<li>Tue:	2:00 – 8:00 PM</li>
+							<li>Wed:	2:00 – 8:00 PM</li>
+							<li>Thu:	2:00 – 8:00 PM</li>
+							<li>Fri:	2:00 – 8:00 PM</li>
+							<li>Sat:	2:00 – 8:00 PM</li>
+							<li>Sun:	2:00 – 8:00 PM</li>
+						</ul>
+					</div>
+				</div>
+				<div>
+					<button id="testimonials"><a href="https://coding-vohra.business.site/#testimonials">TESTIMONIALS</a></button>
+					<div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#gallery">GALLERY</a></button>     </div>
+				  <div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#details">MAP</a></button></div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</footer>
+		<div id="sub-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="copyright">
+							<p>
+								<span>&copy; All right reserved </span><a href="/about.html" target="_blank">@coladco</a>
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<ul class="social-network">
+							<li><a href="https://www.facebook.com/coladco" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com/coladco" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://linkedin.com/in/coladco-contact-95aa48226" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://www.instagram.com/official_coladco" data-placement="top" title="instagram"><i class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		</footer>
 </div>
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 <!-- javascript
