--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Above Multi-purpose Free Bootstrap Responsive Template</title>
+<title>Coladco | Most Interactive Coaching Institute</title>
+<link rel="icon" href="img/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="http://webthemez.com" />
@@ -32,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"/></a>
+                    <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt="logo"/></a>
                 </div>
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
@@ -64,41 +65,42 @@
 
 		<div class="row">
 			<div class="col-lg-12">
-				<div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus, vero mollitia velit ad consectetur. Alias, laborum excepturi nihil autem nemo numquam, ipsa architecto non, magni consequuntur quam.</div>
+				<div class=""><h3>Courses We Offer</h3><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>Coladco offers more than 12 courses across the disciplines, with courses opening in new areas every year. The courses includes from basic level to development part, every course available for full-time and part-time study. Each course is designed with professionality and updated with new technologies. You don't need to be from tech background to learn from these courses, as All courses are designed from scratch!<br>
+					<b>Whatsapp or Call us 7042414212 or 01293544677 to know more from one of our executive.</b></div>
 			</div>
 		</div>
 <div class="row">
             <div class="col-md-4">
 			<div class="textbox">
-                <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                <h3>Python Course</h3>
+				<p>Learn Python from Scratch, Become a Fluent Python Programmer. Learn the fundamentals and become an independent programmer.Learn How to inspect and understand APIs and third party libraries to be used with Python 3. First step in your journey to become a job ready python developer.</p>
             </div> </div>
             <div class="col-md-4">
 			<div class="textbox">
-                  <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                  <h3>Web Development for beginner</h3>
+				<p>The Need for web developers is increasing. These days, the restaurant and retail industries, as well as many others, are now online. Web developers build interactive websites for different businesses, allowing organizations to offer their services at a global level.</p>
             </div> </div>
 			<div class="col-md-4">
 			<div class="textbox">
-                  <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                  <h3>Full Stack Web Development</h3>
+				<p>A Full Stack Developer is someone who works with the Back End — or server side — of the application as well as the Front End, or client side. Learn to Handle eveything a Web Developer can do. develop both client and server side Web Applications and become a job ready developer.</p>
             </div> </div>
         </div>
 		<div class="row">
             <div class="col-md-4">
 			<div class="textbox">
-                <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                <h3>M.E.R.N Stack Development</h3>
+				<p>MongoDB Express React Node.js, MERN is a full-stack, following the traditional 3-tier architectural pattern.Like any web stack, you can build whatever you want in MERN.MERN is the stack of choice for today’s web developers looking to move quickly, particularly for those with React.js experience.</p>
             </div> </div>
             <div class="col-md-4">
 			<div class="textbox">
-                  <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                  <h3>C++ Language with DSA</h3>
+				<p>Learn Dynamic Programming, Graph, Tries, Trees, HashMap, Stacks, Queues, Heap and much more! .Develop your Analytical skills on Data Structure and use then efficiently.Improve your problem solving skills .Learn everything you need to ace difficult coding interviews</p>
             </div> </div>
 			<div class="col-md-4">
 			<div class="textbox">
-                  <h3>Heading Course</h3>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vest sit amet, consec ibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta.</p>
+                  <h3>Job Ready Course</h3>
+				<p>One of the most Highlighted course of our Institute. Become job ready Advanced web developer and one can acquire a high paying job after Completing this Course Guranteed. Learn programming languages, Data structure and Algorithms, Web development from basic to advance, learn handling Api's, Implementing complex Back-end Codes,</p>
             </div> </div>
         </div> 
 </section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>
@@ -127,78 +129,74 @@
     </div>
     </section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
-					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Our Contact</h5>
+						<address>
+						<strong>Coladco</strong><br>
+						425 Sector 31<br>
+						pin-121003</address>
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<i class="icon-phone"></i> 0129-3655277 <br>
+							<i class="icon-envelope-alt"></i> contactuscoladco@gmail.com
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Quick Links</h5>
+						<ul class="link-list">
+							<li><a href="https://www.google.com/maps/dir//COLADCO/data=!4m8!4m7!1m0!1m5!1m1!1s0x390cddb682b1ff6f:0x563cf9eaf8f6c262!2m2!1d77.3133462!2d28.4431904">Get Directions</a></li>
+							<li><a href="tel:+91-70424-14212">Contact Us</a></li>
+							<li><a href="https://api.whatsapp.com/send/?phone=%2B917042414212&text&app_absent=0">Whatsapp Us</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Business Timings</h5>
+						<ul class="link-list">
+							<li>Mon:	2:00 – 8:00 PM</li>
+							<li>Tue:	2:00 – 8:00 PM</li>
+							<li>Wed:	2:00 – 8:00 PM</li>
+							<li>Thu:	2:00 – 8:00 PM</li>
+							<li>Fri:	2:00 – 8:00 PM</li>
+							<li>Sat:	2:00 – 8:00 PM</li>
+							<li>Sun:	2:00 – 8:00 PM</li>
+						</ul>
+					</div>
+				</div>
+				<div>
+					<button id="testimonials"><a href="https://coding-vohra.business.site/#testimonials">TESTIMONIALS</a></button>
+					<div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#gallery">GALLERY</a></button>     </div>
+				  <div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#details">MAP</a></button></div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</footer>
+		<div id="sub-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="copyright">
+							<p>
+								<span>&copy; All right reserved </span><a href="/about.html" target="_blank">@coladco</a>
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<ul class="social-network">
+							<li><a href="https://www.facebook.com/coladco" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com/coladco" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://linkedin.com/in/coladco-contact-95aa48226" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://www.instagram.com/official_coladco" data-placement="top" title="instagram"><i class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		</footer>
 </div>
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 <!-- javascript
