--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@
                         <li><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="portfolio.html">Gallary</a></li>
+                        <!-- <li><a href="pricing.html">Pricing</a></li> -->
                         <li class="active"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -61,11 +61,6 @@
 	<div class="container">
 	<div class="row">
  <div class="col-md-12">
-							 
-
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:300px;width:100%;"><div id="gmap_canvas" style="height:300px;width:100%;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.coladco.com" id="get-map-data">trivoo</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(28.44306,77.313574),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(28.44306,77.313574)});infowindow = new google.maps.InfoWindow({content:"<b>COLADCO</b><br/>(Interactive Coaching institute)<br/> Haryana" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
-								</div>
-</div>
 
 
 	<div class="row">
@@ -106,15 +101,17 @@
 								<div class="col-md-6">
 								
 <div class="span4"><div class="title-box clearfix "><h3 class="title-box_primary">Contact info</h3></div> 
-<h5>Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium.</h5>
-<p>Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, cadipisicing sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium Atque sed, quidem quis praesentium, ut unde fuga error commodi architecto, laudantium culpa tenetur at id, beatae pet.<br>
+<h5>Coladco is managed by a team of IT professionals, who offers the smart classes and also provide the best professional training in information technology.
+</h5>
+<p>Still have questions?
+	Fill up the form and we will arrange a Call Back from our executive to Solve Your all queries related to our Courses!
+	<br>
 </p><address>
-<strong>The Company Name.<br>
-12345 St John Point,<br>
-Brisbean, ABC 12 St 11.</strong><br>
-Telephone: +1 234 567 890<br>
-FAX: +1 234 567 890<br>
-E-mail: <a href="mailto:info@sitename.org">mail@sitename.org</a><br>
+<strong>Coladco<br>
+	425 Sector 31<br>
+Faridabad,Haryana 121003</strong><br>
+Telephone:0129-3655277<br>
+E-mail: <a href="mailto:contactuscoladco@gmail.com">contactuscoladco@gmail.com</a><br>
 </address> </div> 
 								</div>
 							</div>
