--- a/courses.html
+++ b/courses.html
@@ -40,8 +40,8 @@
                         <li><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
 						<li class="active"><a href="courses.html">Courses</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="portfolio.html">Gallary</a></li>
+                        <!-- <li><a href="pricing.html">Pricing</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -103,22 +103,22 @@
 				<p>One of the most Highlighted course of our Institute. Become job ready Advanced web developer and one can acquire a high paying job after Completing this Course Guranteed. Learn programming languages, Data structure and Algorithms, Web development from basic to advance, learn handling Api's, Implementing complex Back-end Codes,</p>
             </div> </div>
         </div> 
-</section>	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p> </br>
+</section>	<p>We are expert in understanding your aptitude and identifying your talent and then nurture you for technical excellence so, offers the right course to all students either they are new to the industry or looking to improve the skills.We trained you in optimized period of time with comprehensive and accurate training.</p> </br>
         <div class="row service-v1 margin-bottom-40">
             <div class="col-md-4 md-margin-bottom-40">
                <img class="img-responsive" src="img/service1.jpg" alt="">   
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+                <p>Web development is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services.</p>        
             </div>
             <div class="col-md-4">
                 <img class="img-responsive" src="img/service2.jpg" alt="">            
                 <h3>Mobile Development</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+                <p>Mobile app development is the act or process by which a mobile app is developed for mobile devices, such as personal digital assistants, enterprise digital assistants or mobile phones. These software applications are designed to run on mobile devices, such as a smartphone or tablet computer.</p>        
             </div>
             <div class="col-md-4 md-margin-bottom-40">
               <img class="img-responsive" src="img/service3.jpg" alt="">  
                 <h3>Responsive Design</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus temporibus perferendis nesciunt quam repellendus nulla nemo ipsum odit corrupti consequuntur possimus</p>        
+                <p>Mobile app development is the act or process by which a mobile app is developed for mobile devices, such as personal digital assistants, enterprise digital assistants or mobile phones. These software applications are designed to run on mobile devices, such as a smartphone or tablet computer.</p>        
             </div>
         </div> 
  
