--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
                         <li><a href="index.html">Home</a></li> 
 						<li><a href="about.html">About Us</a></li>
 						<li><a href="courses.html">Courses</a></li>
-                        <li class="active"><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li class="active"><a href="portfolio.html">Gallary</a></li>
+                        <!-- <li><a href="pricing.html">Pricing</a></li> -->
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -62,10 +62,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<ul class="portfolio-categ filter">
-					<li class="all active"><a href="#">All</a></li>
-					<li class="web"><a href="#" title="">Web design</a></li>
-					<li class="icon"><a href="#" title="">Mobile App</a></li>
-					<li class="graphic"><a href="#" title="">UI design</a></li>
+					<li class="all active"><a href="#">Gallary</a></li>
 				</ul>
 				<div class="clearfix">
 				</div>
@@ -80,7 +77,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/1.jpg" alt="">
+						<img src="img/c1.jpg" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -91,7 +88,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/2.jpg" alt="">
+						<img src="img/c7.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -102,7 +99,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/3.jpg" alt="">
+						<img src="img/c3.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -113,7 +110,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/4.jpg" alt="">
+						<img src="img/c5.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -124,7 +121,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/5.jpg" alt="">
+						<img src="img/c4.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -135,7 +132,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/6.jpg" alt="">
+						<img src="img/c8.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<li class="item-thumbs col-lg-3 design" data-id="id-0" data-type="web">
@@ -145,7 +142,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/7.jpg" alt="">
+						<img src="img/c2.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 						<!-- Item Project and Filter Name -->
@@ -156,7 +153,7 @@
 						<span class="overlay-img-thumb"><i class="icon-info-blocks fa fa-code"></i></span>
 						</a>
 						<!-- Thumb Image and Description -->
-						<img src="img/works/8.jpg" alt="">
+						<img src="img/c6.JPG" alt="">
 						</li>
 						<!-- End Item Project -->
 					</ul>
@@ -167,78 +164,74 @@
 	</div>
 	</section>
 	<footer>
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Our Contact</h5>
-					<address>
-					<strong>Abovecompany Inc</strong><br>
-					JC Main Road, Near Silnile tower<br>
-					 Pin-21542 NewYork US.</address>
-					<p>
-						<i class="icon-phone"></i> (123) 456-789 - 1255-12584 <br>
-						<i class="icon-envelope-alt"></i> email@domainname.com
-					</p>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Quick Links</h5>
-					<ul class="link-list">
-						<li><a href="#">Latest Events</a></li>
-						<li><a href="#">Terms and conditions</a></li>
-						<li><a href="#">Privacy policy</a></li>
-						<li><a href="#">Career</a></li>
-						<li><a href="#">Contact us</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-				<div class="widget">
-					<h5 class="widgetheading">Latest posts</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-lg-3">
-					<div class="widget">
-					<h5 class="widgetheading">Recent News</h5>
-					<ul class="link-list">
-						<li><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></li>
-						<li><a href="#">Pellentesque et pulvinar enim. Quisque at tempor ligula</a></li>
-						<li><a href="#">Natus error sit voluptatem accusantium doloremque</a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="sub-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6">
-					<div class="copyright">
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Our Contact</h5>
+						<address>
+						<strong>Coladco</strong><br>
+						425 Sector 31<br>
+						pin-121003</address>
 						<p>
-							<span>&copy; Above Site All right reserved. Template By </span><a href="http://webthemez.com" target="_blank">WebThemez</a>
+							<i class="icon-phone"></i> 0129-3655277 <br>
+							<i class="icon-envelope-alt"></i> contactuscoladco@gmail.com
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Quick Links</h5>
+						<ul class="link-list">
+							<li><a href="https://www.google.com/maps/dir//COLADCO/data=!4m8!4m7!1m0!1m5!1m1!1s0x390cddb682b1ff6f:0x563cf9eaf8f6c262!2m2!1d77.3133462!2d28.4431904">Get Directions</a></li>
+							<li><a href="tel:+91-70424-14212">Contact Us</a></li>
+							<li><a href="https://api.whatsapp.com/send/?phone=%2B917042414212&text&app_absent=0">Whatsapp Us</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-lg-3">
+					<div class="widget">
+						<h5 class="widgetheading">Business Timings</h5>
+						<ul class="link-list">
+							<li>Mon:	2:00 – 8:00 PM</li>
+							<li>Tue:	2:00 – 8:00 PM</li>
+							<li>Wed:	2:00 – 8:00 PM</li>
+							<li>Thu:	2:00 – 8:00 PM</li>
+							<li>Fri:	2:00 – 8:00 PM</li>
+							<li>Sat:	2:00 – 8:00 PM</li>
+							<li>Sun:	2:00 – 8:00 PM</li>
+						</ul>
+					</div>
+				</div>
+				<div>
+					<button id="testimonials"><a href="https://coding-vohra.business.site/#testimonials">TESTIMONIALS</a></button>
+					<div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#gallery">GALLERY</a></button>     </div>
+				  <div>  <button id="testimonials"><a href="https://coding-vohra.business.site/#details">MAP</a></button></div>
 				</div>
 			</div>
 		</div>
-	</div>
-	</footer>
+		<div id="sub-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="copyright">
+							<p>
+								<span>&copy; All right reserved </span><a href="/about.html" target="_blank">@coladco</a>
+							</p>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<ul class="social-network">
+							<li><a href="https://www.facebook.com/coladco" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com/coladco" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://linkedin.com/in/coladco-contact-95aa48226" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<li><a href="https://www.instagram.com/official_coladco" data-placement="top" title="instagram"><i class="fa fa-instagram"></i></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		</footer>
 </div>
 <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 <!-- javascript
